--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,11 +11,11 @@
             </div>
             <div class="form-group">
               <label for="username">Username</label>
-              <input type="text" class="form-control" name="username" placeholder="Enter username">
+              <input type="text" class="form-control" name="name" placeholder="Enter username">
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" name="password" placeholder="Password">
+              <input type="password" class="form-control" name="password_hash" placeholder="Password">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
@@ -24,12 +24,12 @@
           <form role="form" action="/users/login" method="post">
             <h3 class="text-center" >Login</h3>
             <div class="form-group">
-              <label for="username">Username</label>
-              <input type="text" class="form-control" name="username" placeholder="Enter username">
+              <label for="email">Email</label>
+              <input type="text" class="form-control" name="email" placeholder="Enter username">
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" name="password" placeholder="Password">
+              <input type="password" class="form-control" name="password_hash" placeholder="Password">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
