creates working logout button

--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -6,5 +6,7 @@
 </div>
 
 <div id="logout">
-  <button type="submit" class="btn btn-warning">Logout</button>
+  <a href="/logout">
+    <button type="submit" class="btn btn-warning">Logout</button>
+  </a>
 </div>
