--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -3,10 +3,22 @@
   <h1> Welcome <%= @user.name %>! </h1>
   <h2> User rating: <%= @user.patron_rating %> </h2>
   <h2> About: <%= @user.about_me %> </h2>
+  <!-- TODO: Make next two lines conditional on non-nil values -->
+  <h2> Cafe rating: <%= @user.cafe_rating %> </h2>
+  <h2> Cafe About: <%= @user.cafe_about %> </h2>
+  <h2> Cafe Location: <%= @user.cafe_location %> </h2>
+
+
 </div>
 
-<div id="logout">
+<div id="profile_button">
+  <a href="/newhost">
+    <button type="submit" class="btn btn-info">Become a host!</button>
+  </a>
   <a href="/logout">
     <button type="submit" class="btn btn-warning">Logout</button>
   </a>
 </div>
+t.text :cafe_location
+      t.text :cafe_rating
+      t.text :cafe_about
