--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -10,7 +10,7 @@
               <input type="email" class="form-control" name="email" placeholder="Enter email">
             </div>
             <div class="form-group">
-              <label for="username">Username</label>
+              <label for="username">Name</label>
               <input type="text" class="form-control" name="name" placeholder="Enter username">
             </div>
             <div class="form-group">
