adds ability to check smoking and outdoor features:

--- a/app/views/hostform.erb
+++ b/app/views/hostform.erb
@@ -9,10 +9,13 @@
               <label for="cafe_location">Location</label>
               <input type="address" class="form-control" name="cafe_location" placeholder="Enter address">
             </div>
-            <div class="form-group">
-              <label for="cafe_about">About Your Space</label>
-              <input type="text" class="form-control" name="cafe_about" placeholder="Enter description">
-            </div>
+              <div class="form-group">
+                <label for="cafe_about">About Your Space</label><br>
+                <input type="text" class="form-control" name="cafe_about" placeholder="Enter description">
+                <label for="rules">Check all that apply</label><br>
+                <input type="checkbox" name="outdoor_area" value="TRUE">Outdoor area<br>
+                <input type="checkbox" name="smoking_ok" value="TRUE">Smoking OK<br>
+              </div>
             <button type="submit" class="btn btn-primary">Make Coffee</button>
           </form>
         </div>
