--- a/public/css/application.css
+++ b/public/css/application.css
@@ -11,10 +11,11 @@ background-attachment: fixed;
 .container {
   background-color: white;
   color: #140A00;
-  opacity: 0.8;
+  opacity: 0.85;
   width:   600px;
   padding: 20px 20px 20px 20px;
   border:  1px black;
+  border-radius: 4px;
 }
 
 .navbar-inner {
