--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -3,22 +3,9 @@
     <div class="well col-sm-offset-1 col-sm-10">
       <div class="row">
         <div class="sign-up col-sm-6" style="border-right: 1px solid #898989">
-          <form role="form" action="/users/create" method="post">
-            <h3 class="text-center">Signup</h3>
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" class="form-control" name="email" placeholder="Enter email">
-            </div>
-            <div class="form-group">
-              <label for="username">Name</label>
-              <input type="text" class="form-control" name="name" placeholder="Enter username">
-            </div>
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" name="password_hash" placeholder="Password">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
+          <a href='/sign_in'>
+            <button class="btn btn-primary">Signup with Twitter</button>
+          </a>
         </div>
         <div class="sign-in col-sm-6">
           <form role="form" action="/users/login" method="post">
