--- a/app/views/cafes.erb
+++ b/app/views/cafes.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <h1>Check out a cafe near you!<h1>
 
   <ul>
@@ -13,3 +13,4 @@
     <% end %>
   </ul>
 </div>
+ -->
