--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,32 +1,20 @@
 <div class="container">
-  <div class="row">
-    <div class="well col-sm-offset-1 col-sm-10">
-      <div class="row">
-        <div class="sign-up col-sm-6" style="border-right: 1px solid #898989">
-          <a href='/sign_in'>
-            <button class="btn btn-primary">Signup with Twitter</button>
-          </a>
-        </div>
-        <div class="sign-in col-sm-6">
-          <form role="form" action="/users/login" method="post">
-            <h3 class="text-center" >Login</h3>
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="text" class="form-control" name="email" placeholder="Enter username">
-            </div>
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" name="password_hash" placeholder="Password">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class='browse'>
-  <a href="/cafes">
-    <button type="button" class="btn btn-primary btn-lg">Browse WiCafes</button>
-  </a>
+  <div class="container">
+  <h1>Check out a cafe near you!<h1>
+
+  <ul>
+    <% @users.each do |user| %>
+      <% if user.cafe_location != nil %>
+        <h1> Welcome <%=  user.name || user.username %>! </h1>
+        <br>
+          <ul>
+            <li>About this cafe: <%= user.cafe_about %> </li>
+            <% if @current_user != nil %>
+              <li>Cafe location: <%= user.cafe_location %> </li>
+            <% end %>
+            <br>
+          </ul>
+        <% end %>
+    <% end %>
+  </ul>
 </div>
