--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -1,6 +1,6 @@
 <div class="container">
 <!--<img src="<%#= @gravatar %>">-->
-  <h1> Welcome <%= @user.name %>! </h1>
+  <h1> Welcome <%= @user.username || @user.name %>! </h1>
   <h3> User rating: <%= @user.patron_rating %> </h3>
   <h3> About Me: <%= @user.about_me %> </h3>
   <% if @user.cafe_location != "" %>
