--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -3,7 +3,7 @@
   <h1> Welcome <%= @user.username || @user.name %>! </h1>
   <h3> User rating: <%= @user.patron_rating %> </h3>
   <h3> About Me: <%= @user.about_me %> </h3>
-  <% if @user.cafe_location != "" %>
+  <% if @user.cafe_location != "" && @user.cafe_location != nil %>
     <h3> Cafe rating: <%= @user.cafe_rating %> </h3>
     <h3> Cafe About: <%= @user.cafe_about %> </h3>
     <h3> Cafe Location: <%= @user.cafe_location %> </h3>
