Fixes login button bug, redirects to index on login

--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -20,7 +20,7 @@
 </div>
 <div id="buttons">
   <div id="profile_button">
-    <a href="/cafes">
+    <a href="/">
       <button type="submit" class="btn btn-success">Find a cafe near you</button>
     </a>
   </div>
