--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,10 @@
 <div class="container">
-  <div class="container">
   <h1>Check out a cafe near you!<h1>
 
   <ul>
     <% @users.each do |user| %>
       <% if user.cafe_location != nil %>
-        <h1> Welcome <%=  user.name || user.username %>! </h1>
+        <h1> Cafe <%=  user.name || user.username %>! </h1>
         <br>
           <ul>
             <li>About this cafe: <%= user.cafe_about %> </li>
