--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,34 +17,26 @@
       <div class="navbar-header">
         <a class="navbar-brand navbar-center" href="/">Welcome to WiCafe</a>
           <div class="header-button">
-            <% if @current_user == nil %>
-              <a href='/sign_in'>
-                <button class="btn btn-primary">Signup or Log In with Twitter</button>
+            <% if @logged_in != true %>
+              <a href='/profile'>
+                <button class="btn btn-primary">My Profile</button>
               </a>
-            <% else %>
               <a href="/logout">
                   <button type="submit" class="btn btn-warning">Logout</button>
               </a>
+            <% else %>
+              <a href='/sign_in'>
+                <button class="btn btn-primary">Signup or Log In with Twitter</button>
+              </a>
             <% end %>
           </div>
-  </div>
         </div>
-      <% if @user %>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= @username %><span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Profile</a></li>
-              <li class="divider"></li>
-              <li><a href="/logout">Signout</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-      <% end %>
+      </div>
     </div><!-- /.container-fluid -->
   </nav>
   <%= yield %>
 </body>
 </html>
+
+
+
