--- a/app/views/edit_profile.erb
+++ b/app/views/edit_profile.erb
@@ -4,15 +4,18 @@
       <div class="row">
         <div class="sign-up col-sm-6">
           <form role="form" action="/newhost/update" method="post">
-            <h3 class="text-center">Edit Your Profile</h3>
+            <h3 class="text-center">Tell us About Yourself</h3>
             <div class="form-group">
               <label for="about_me">About Me</label>
               <input type="address" class="form-control" name="about_me">
             </div>
-            <button type="submit" class="btn btn-primary">Refresh Pot</button>
+            <button type="submit" class="btn btn-primary">Refresh The Pot</button>
           </form>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+
+
