--- a/app/views/hostform.erb
+++ b/app/views/hostform.erb
@@ -2,21 +2,24 @@
   <div class="row">
     <div class="well col-sm-offset-1 col-sm-10">
       <div class="row">
-        <div class="sign-up col-sm-6">
+        <div class="sign-up col-sm-10">
           <form role="form" action="/newhost/update" method="post">
-            <h3 class="text-center">Become a Host</h3>
+            <h3 class="text-center">Be the Best Cafe in Town</h3>
             <div class="form-group">
               <label for="cafe_location">Location</label>
               <input type="address" class="form-control" name="cafe_location" placeholder="Enter address">
             </div>
-              <div class="form-group">
-                <label for="cafe_about">About Your Space</label><br>
+            <div class="form-group">
+              <label for="cafe_about">About Your Space</label><br>
                 <input type="text" class="form-control" name="cafe_about" placeholder="Enter description">
-                <label for="rules">Check all that apply</label><br>
+              <label for="rules">Check all that apply</label><br>
                 <input type="checkbox" name="outdoor_area" value="TRUE">Outdoor area<br>
                 <input type="checkbox" name="smoking_ok" value="TRUE">Smoking OK<br>
-              </div>
-            <button type="submit" class="btn btn-primary">Make Coffee</button>
+              <label for="cafe_photo">Upload a photo of your space</h3>
+                <input type="filepicker" data-fp-apikey="ATjIYQEFTgi03Sq7zNllVz" data-fp-mimetypes="image/*" data-fp-container="modal" data-fp-maxsize="100000" data-fp-services="COMPUTER,DROPBOX,FACEBOOK,GITHUB,GOOGLE_DRIVE,FLICKR,GMAIL,INSTAGRAM,URL" onchange="alert(event.fpfile.url)">
+                <br>
+              <button type="submit" class="btn btn-primary">Make Coffee</button>
+            </div>
           </form>
         </div>
       </div>
